checking CICD automatization

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
     </nav>
   </header>
-
+<div>TEXTO VISIBLE GRACIAS AL DESPLIEGUE AUTOMATIZADO</div>
   <div class="body-container">
     <div class="product-box">
       <img src="images/frappucino_cookies.webp" alt="Frappuccino® Cookies & Cream">
